# lab14

./: .travis.yml  CMakeLists.txt  README.md  a.out  main.cpp
